# centurion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml  motd.txt
benches/: parser_benchmarks.rs
migrations/postgres/: .gitkeep
migrations/sqlite/: .gitkeep
src/: error.rs  main.rs
src/actors/: channel.rs  connection.rs  mod.rs  server.rs
src/commands/: mod.rs  standard_replies.rs
src/commands/handlers/: chathistory.rs  join.rs  kick.rs  kick_test.rs  list.rs  list_test.rs  mod.rs  mode.rs  mode_test.rs  motd.rs  names.rs  nick.rs  notice.rs  oper.rs  part.rs  privmsg.rs  query.rs  tagmsg.rs  topic.rs  topic_test.rs  who.rs  who_test.rs  whois.rs
src/db/: migrations.rs  mod.rs  models.rs
src/db/queries/: bans.rs  channels.rs  config.rs  mod.rs  users.rs
src/history/: mod.rs  queries.rs  storage.rs
src/legion/: channel_manager.rs  channels.rs  federation.rs  keys.rs  members.rs  mod.rs  session.rs
src/protocol/: capabilities.rs  codec.rs  commands.rs  extensions.rs  mod.rs  multiline.rs  read_marker.rs  redaction.rs  replies.rs  typing.rs
src/security/: auth.rs  mod.rs  tls.rs  validation.rs
src/state/: channel.rs  connection.rs  mod.rs
src/utils/: config.rs  mod.rs
test_server/: Cargo.toml  test_benchmark.rs  test_client.rs  test_comprehensive.rs  test_nasty.rs  test_simple.rs
test_server/test_server/: test_simple.rs
