[package]
name = "ironchatd"
version = "0.1.0"
edition = "2021"
authors = ["IronChatD Contributors"]
description = "🦾 Bleeding-edge IRCv3 server with 2024-2025 draft capabilities"
license = "MIT"
repository = "https://github.com/exec/ironchatd"
homepage = "https://github.com/exec/ironchatd"
documentation = "https://docs.rs/ironchatd"
keywords = ["irc", "server", "ircv3", "chat", "networking"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
# Shared IRC protocol library
iron-protocol = { path = "../iron-protocol", features = ["std", "serde", "chrono", "bleeding-edge", "server"] }

tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.26"
rustls = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
argon2 = "0.5"
rand = "0.8"
once_cell = "1.20"
rustls-pemfile = "2.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
config = "0.14"
toml = "0.8"
futures = "0.3"
pin-project = "1.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"
governor = "0.8"
nonzero_ext = "0.3"

# Crypto dependencies (needed by auth modules)
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Remove duplicated dependencies (now provided by iron-protocol)
# irc-proto = "0.15"  # Replaced by iron-protocol

[dev-dependencies]
mockall = "0.13"
proptest = "1.6"
criterion = "0.5"

[features]
default = ["bleeding-edge"]
bleeding-edge = ["iron-protocol/bleeding-edge"]

[[bench]]
name = "parser_benchmarks"
harness = false
