[package]
name = "legion-server"
version = "0.1.0"
edition = "2021"
authors = ["Centurion Contributors"]
description = "🏛️ Legion Server - Secure IRC server with Legion Protocol support"
license = "MIT"
repository = "https://github.com/exec/centurion"
homepage = "https://github.com/exec/centurion"
documentation = "https://docs.rs/legion-server"
keywords = ["irc", "server", "ircv3", "chat", "networking"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
# Shared IRC protocol library
legion-protocol = { version = "0.1", features = ["std", "serde", "chrono", "bleeding-edge", "server"] }
# E2E encryption protocol
phalanx-crypto = { version = "0.1", features = ["std", "serde", "async"] }


tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.26"
rustls = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
argon2 = "0.5"
rand = "0.8"
once_cell = "1.20"
rustls-pemfile = "2.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
config = "0.14"
toml = "0.8"
futures = "0.3"
pin-project = "1.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
num_cpus = "1.16"
governor = "0.8"
nonzero_ext = "0.3"
bincode = "1.3"
hex = "0.4"

# Crypto dependencies (needed by auth modules)
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["bleeding-edge"]
bleeding-edge = ["legion-protocol/bleeding-edge"]
