[package]
name = "ironchatd-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_simple"
path = "test_simple.rs"

[[bin]]
name = "test_client"
path = "test_client.rs"

[[bin]]
name = "test_nasty"
path = "test_nasty.rs"

[[bin]]
name = "test_comprehensive"
path = "test_comprehensive.rs"

[[bin]]
name = "test_benchmark"
path = "test_benchmark.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }